# oscc

./: CMakeLists.txt
firmware/: CMakeCache.txt  Makefile  cmake_install.cmake
